docs hightlight fixes, dark mode improvements

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -289,7 +289,8 @@ $code-line-height: 1.25rem !default;
 $code-bg: var(--#{$prefix}gray-100) !default;
 
 $pre-padding: 1rem !default;
-$pre-bg: $code-bg !default;
+$pre-bg: var(--#{$prefix}bg-surface-dark) !default;
+$pre-color: var(--#{$prefix}light) !default;
 
 $kbd-padding-y: 2px !default;
 $kbd-color: var(--#{$prefix}muted) !default;
@@ -530,7 +531,7 @@ $dropdown-link-active-bg: var(--#{$prefix}active-bg) !default;
 
 //tooltip
 $tooltip-bg: var(--#{$prefix}bg-surface-dark) !default;
-$tooltip-color: var(--#{$prefix}white) !default;
+$tooltip-color: var(--#{$prefix}light) !default;
 
 //loader
 $loader-size: 2.5rem !default;
