--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -82,11 +82,6 @@ body:not(.theme-dark) .hide-theme-light {
     color: inherit;
   }
 
-  pre {
-    background-color: $dark-mode-darken;
-    border-color: $dark-mode-border-color;
-  }
-
   .card-tabs .nav-tabs .nav-link.active {
     background-color: $dark;
     color: inherit;
