--- a/src/scss/ui/_type.scss
+++ b/src/scss/ui/_type.scss
@@ -107,8 +107,8 @@ dl {
 
 pre {
   padding: $pre-padding;
-  background: var(--#{$prefix}code-bg);
-  color: var(--#{$prefix}code-color);
+  background: $pre-bg;
+  color: $pre-color;
   border-radius: var(--#{$prefix}border-radius);
 
   code {
@@ -126,36 +126,6 @@ kbd {
   font: inherit;
   box-shadow: 0 0 0 1px var(--#{$prefix}border-color), 0 3px 0 0 var(--#{$prefix}bg-surface), 0 3px 0 1px var(--#{$prefix}border-color);
 }
-
-  //code {
-//  padding: 2px 4px;
-//  background: rgba($code-color, .03);
-//  border: var(--#{$prefix}border-width) var(--#{$prefix}border-style) rgba($code-color, .064);
-//  border-radius: var(--#{$prefix}border-radius);
-//  font-weight: var(--#{$prefix}font-weight-normal);
-//}
-
-
-//pre {
-//  padding: 1rem;
-//  overflow: auto;
-//  font-size: $h5-font-size;;
-//  hyphens: none;
-//  line-height: $code-line-height;
-//  tab-size: 3;
-//  border-radius: var(--#{$prefix}border-radius);
-//  white-space: pre-wrap;
-//  background: mix($light, #ffffff, 50%);
-//  border: var(--#{$prefix}border-width) var(--#{$prefix}border-style) $border-color-translucent;
-//  -webkit-font-smoothing: auto;
-//
-//  code {
-//    padding: 0;
-//    background: none;
-//    border: none;
-//    border-radius: 0;
-//  }
-//}
 
 img {
   max-width: 100%;
